Adds necessary options to the repo

--- a/maven-repair/pom.xml
+++ b/maven-repair/pom.xml
@@ -196,78 +196,90 @@
                 <directory>src/main/java</directory>
                 <filtering>true</filtering>
             </resource>
-        </resources>   
-        <plugins>
-            <plugin>
-                <!-- used for accessing the dependency versions at runtime -->
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>properties-maven-plugin</artifactId>
-                <version>1.0.0</version>
-                <executions>
-                    <execution>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>write-project-properties</goal>
-                        </goals>
-                        <configuration>
-                                <outputFile>${basedir}/src/main/java/versions.properties</outputFile>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.5</version>
-                <configuration>
-                    <goalPrefix>repair</goalPrefix>
-                    <skipErrorNoDescriptorsFound>true
-                    </skipErrorNoDescriptorsFound>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>mojo-descriptor</id>
-                        <goals>
-                            <goal>descriptor</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>help-goal</id>
-                        <goals>
-                            <goal>helpmojo</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.5</version>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.8</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <skipLocalStaging>true</skipLocalStaging>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
-                    <stagingProfileId>6cb77ea3fc1e79</stagingProfileId>
-                </configuration>
-            </plugin>
-            
-        </plugins>
+        </resources>  
+	      <plugins>
+	          <plugin>
+	              <!-- used for accessing the dependency versions at runtime -->
+	              <groupId>org.codehaus.mojo</groupId>
+	              <artifactId>properties-maven-plugin</artifactId>
+	              <version>1.0.0</version>
+	              <executions>
+	                  <execution>
+	                      <phase>initialize</phase>
+	                      <goals>
+	                          <goal>write-project-properties</goal>
+	                      </goals>
+	                      <configuration>
+	                              <outputFile>${basedir}/src/main/java/versions.properties</outputFile>
+	                      </configuration>
+	                  </execution>
+	              </executions>
+	          </plugin>
+	          <plugin>
+	              <groupId>org.apache.maven.plugins</groupId>
+	              <artifactId>maven-gpg-plugin</artifactId>
+	              <version>1.5</version>
+	              <executions>
+	                  <execution>
+	                      <id>sign-artifacts</id>
+	                      <phase>deploy</phase>
+	                      <goals>
+	                          <goal>sign</goal>
+	                      </goals>
+	                  </execution>
+	              </executions>
+	          </plugin>
+	          <plugin>
+	              <groupId>org.sonatype.plugins</groupId>
+	              <artifactId>nexus-staging-maven-plugin</artifactId>
+	              <version>1.6.8</version>
+	              <extensions>true</extensions>
+	              <configuration>
+	                  <skipLocalStaging>true</skipLocalStaging>
+	                  <serverId>ossrh</serverId>
+	                  <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+	                  <autoReleaseAfterClose>true</autoReleaseAfterClose>
+	                  <stagingProfileId>6cb77ea3fc1e79</stagingProfileId>
+	              </configuration>
+	          </plugin>
+	          <plugin>
+	              <artifactId>maven-assembly-plugin</artifactId>
+	              <version>3.1.1</version>
+	              <configuration>
+	                  <descriptors>
+	                  <descriptor>repository.xml</descriptor>
+	                  </descriptors>
+	              </configuration>
+	          </plugin>   
+	      </plugins>
+	      <pluginManagement>
+	        <plugins>
+                <plugin>
+	                <groupId>org.apache.maven.plugins</groupId>
+	                <artifactId>maven-plugin-plugin</artifactId>
+	                <version>3.5</version>
+	                <configuration>
+	                    <goalPrefix>repair</goalPrefix>
+	                    <skipErrorNoDescriptorsFound>true
+	                    </skipErrorNoDescriptorsFound>
+	                </configuration>
+	                <executions>
+	                    <execution>
+	                        <id>mojo-descriptor</id>
+	                        <goals>
+	                            <goal>descriptor</goal>
+	                        </goals>
+	                    </execution>
+	                    <execution>
+	                        <id>help-goal</id>
+	                        <goals>
+	                            <goal>helpmojo</goal>
+	                        </goals>
+	                    </execution>
+	                </executions>
+	            </plugin>
+	          </plugins>
+	      </pluginManagement>
     </build>
 
     <profiles>
