--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -103,3 +103,8 @@ SKIP_DELETE=0 # Set to 1 to skip the deletion of docker containers
 
 ### Optional java arguments
 JAVA_OPTS= # optional arguments for java such as Xmx
+
+
+### Experimental repair plugins for the pipeline
+
+EXPERIMENTAL_PLUGIN_REPOS= #The ids, names and urls of all experimental pluginrepos used. Must be a list of length n*3 in the order id, name, url, repeat.
