--- a/repairnator/docker-images/pipeline-dockerimage/Dockerfile
+++ b/repairnator/docker-images/pipeline-dockerimage/Dockerfile
@@ -38,6 +38,7 @@ ENV NOTIFY_TO=
 ENV REPAIR_TOOLS=
 ENV GITHUB_USERNAME=
 ENV GITHUB_USEREMAIL=
+ENV EXPERIMENTAL_PLUGIN_REPOS=
 ENV CREATE_PR=0
 
 WORKDIR /root
