--- a/repairnator/kubernetes-support/repairnator-deployment-yamlfiles/repo-monitor.yaml
+++ b/repairnator/kubernetes-support/repairnator-deployment-yamlfiles/repo-monitor.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: repo-monitor
-        image: IMAGENAME
+        image: tailp/repo-monitor
         ports:
           - containerPort: 30050
         env:
