--- a/repairnator/kubernetes-support/repairnator-deployment-yamlfiles/repairnator-worker.yaml
+++ b/repairnator/kubernetes-support/repairnator-deployment-yamlfiles/repairnator-worker.yaml
@@ -25,11 +25,11 @@ spec:
                          # Also note that the db choosed need to have write access like admin default database
         # Optional for pushing or creating PR to github repo provided with the PUSH_PR otherwise can be left blank
         - name: GITHUB_OAUTH
-          value: 214aca06fc00bcb19576fce039e62ce8033864b8
+          value: 
         - name: PUSH_URL
-          value: https://github.com/Tailp/travisplay
+          value: 
         - name: GITHUB_USEREMAIL
-          value: tailp@kth.se
+          value:
         - name: CREATE_PR 
           value: "0"  # "1" if decide to create PR to the repo provided with the PUSH_URL
         # Optional for notifications otherwise can be left blank
