--- a/repairnator/kubernetes-support/repairnator-deployment-yamlfiles/repairnator-worker.yaml
+++ b/repairnator/kubernetes-support/repairnator-deployment-yamlfiles/repairnator-worker.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: repairnator-worker
-        image: repairnator/repairnator-worker
+        image: repairnator/repainator-worker:latest
         env: 
         - name: MONGODB_HOST
           value: mongodb://mongo:27017 # default if service of Mongodb deployed on K8s is called mongo with port 27017.
@@ -25,11 +25,13 @@ spec:
                          # Also note that the db choosed need to have write access like admin default database
         # Optional for pushing or creating PR to github repo provided with the PUSH_PR otherwise can be left blank
         - name: GITHUB_OAUTH
-          value: 
+          value: 3aa2598e2070b94aae42274440c4f54fb720e499
         - name: PUSH_URL
-          value: 
+          value: https://github.com/Tailp/travisplay
+        - name: GITHUB_USERNAME
+          value: tailp
         - name: GITHUB_USEREMAIL
-          value:
+          value: tailp@kth.se
         - name: CREATE_PR 
           value: "0"  # "1" if decide to create PR to the repo provided with the PUSH_URL
         # Optional for notifications otherwise can be left blank
