--- a/repairnator/scripts/config/repairnator.cfg
+++ b/repairnator/scripts/config/repairnator.cfg
@@ -67,7 +67,9 @@ PIPELINE_VERSION=latest
 CHECKBRANCHES_VERSION=LATEST
 
 ### Docker tags
-DOCKER_TAG=spirals/repairnator:$PIPELINE_VERSION # Tag of the docker image to use for pipeline
+DOCKER_TAG=repairnator/pipeline:$PIPELINE_VERSION # Tag of the docker image to use for pipeline
+
+# OPTIONAL, OLD LEGACY EXPERIMENTS
 DOCKER_TAG_BEARS=spirals/bears:$PIPELINE_VERSION # Tag of the docker image to use for pipeline when running on Bears mode
 DOCKER_CHECKBRANCHES_TAG=spirals/repairnator-checkbranches:latest # Tag of the docker image to use for checkbranches
 DOCKER_CHECKBRANCHES_TAG_BEARS=spirals/bears-checkbranches:latest # Tag of the docker image to use for checkbranches when running on Bears mode
