add variables into pom to generate jar for K8s-rtscanner-dockerimage

--- a/repairnator/repairnator-realtime/pom.xml
+++ b/repairnator/repairnator-realtime/pom.xml
@@ -55,6 +55,10 @@
                             <mainClass>fr.inria.spirals.repairnator.realtime.RTLauncher</mainClass>
                         </manifest>
                     </archive>
+                    <outputDirectory>
+                        ${dir}
+                    </outputDirectory>
+                     <finalName>${finalname}</finalName>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
