--- a/repairnator/repairnator-realtime/pom.xml
+++ b/repairnator/repairnator-realtime/pom.xml
@@ -20,6 +20,19 @@
             <artifactId>commons-collections4</artifactId>
             <version>4.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/javax.jms/javax.jms-api -->
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>javax.jms-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-all -->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.15.8</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -42,6 +55,10 @@
                             <mainClass>fr.inria.spirals.repairnator.realtime.RTLauncher</mainClass>
                         </manifest>
                     </archive>
+                    <outputDirectory>
+                        ${dir}
+                    </outputDirectory>
+                     <finalName>${finalname}</finalName>
                     <descriptorRefs>
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
