--- a/repairnator/kubernetes-support/repairnator-deployment-yamlfiles/repairnator-worker.yaml
+++ b/repairnator/kubernetes-support/repairnator-deployment-yamlfiles/repairnator-worker.yaml
@@ -25,13 +25,13 @@ spec:
                          # Also note that the db choosed need to have write access like admin default database
         # Optional for pushing or creating PR to github repo provided with the PUSH_PR otherwise can be left blank
         - name: GITHUB_OAUTH
-          value: 3aa2598e2070b94aae42274440c4f54fb720e499
+          value: 
         - name: PUSH_URL
-          value: https://github.com/Tailp/travisplay
+          value: 
         - name: GITHUB_USERNAME
-          value: tailp
+          value: repairnator
         - name: GITHUB_USEREMAIL
-          value: tailp@kth.se
+          value: 
         - name: CREATE_PR 
           value: "0"  # "1" if decide to create PR to the repo provided with the PUSH_URL
         # Optional for notifications otherwise can be left blank
