refactor: avoid to have multiple times a class 'Launcher'

--- a/repairnator/repairnator-checkbranches/pom.xml
+++ b/repairnator/repairnator-checkbranches/pom.xml
@@ -35,7 +35,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>fr.inria.spirals.repairnator.checkbranches.Launcher</mainClass>
+                            <mainClass>fr.inria.spirals.repairnator.checkbranches.CheckBranchLauncher</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
