refactor: better name and documentation for the analyzer from list of builds

--- a/repairnator/repairnator-dockerpool/pom.xml
+++ b/repairnator/repairnator-dockerpool/pom.xml
@@ -35,7 +35,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>fr.inria.spirals.repairnator.dockerpool.Launcher</mainClass>
+                            <mainClass>fr.inria.spirals.repairnator.dockerpool.BuildAnalyzerLauncher</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
