--- a/repairnator/repairnator-scanner/pom.xml
+++ b/repairnator/repairnator-scanner/pom.xml
@@ -15,6 +15,19 @@
             <artifactId>repairnator-core</artifactId>
             <version>3.1-SNAPSHOT</version>
         </dependency>
+        
+        <dependency>
+            <groupId>javax.jms</groupId>
+            <artifactId>javax.jms-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-all -->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-core</artifactId>
+            <version>5.7.0</version>
+        </dependency>
     </dependencies>
 
     <properties>
