--- a/repairnator/docker-images/pipeline-dockerimage/Dockerfile
+++ b/repairnator/docker-images/pipeline-dockerimage/Dockerfile
@@ -10,8 +10,8 @@ COPY logback.xml /root/
 COPY configure_git.sh /root/
 COPY build_repairnator.sh /root/
 COPY pipeline_launcher.sh /root/
-COPY version.ini /root/
 
+RUN echo repairnator-`git rev-parse HEAD` > /root/version.ini
 RUN chmod +x /root/*.sh
 RUN echo "Europe/Paris" > /etc/timezone 
 RUN apt-get update 
