--- a/repairnator/build-rainer/pom.xml
+++ b/repairnator/build-rainer/pom.xml
@@ -19,5 +19,40 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket -->
+    <dependency>
+      <groupId>org.java-websocket</groupId>
+      <artifactId>Java-WebSocket</artifactId>
+      <version>1.4.0</version>
+    </dependency>
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.6</version>
+          <configuration>
+              <archive>
+                  <manifest>
+                      <mainClass>fr.inria.repairnator.BuildRainer</mainClass>
+                  </manifest>
+              </archive>
+              <descriptorRefs>
+                  <descriptorRef>jar-with-dependencies</descriptorRef>
+              </descriptorRefs>
+              <!-- descriptor>src/main/assembly/project.xml</descriptor -->
+          </configuration>
+          <executions>
+              <execution>
+                  <id>make-assembly</id><!-- this is used for inheritance merges -->
+                  <phase>package</phase><!-- append to the packaging phase. -->
+                  <goals>
+                      <goal>single</goal><!-- goals == mojos -->
+                  </goals>
+              </execution>
+          </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
