Feat: add ActiveMQ component to submit builds

--- a/repairnator/build-rainer/pom.xml
+++ b/repairnator/build-rainer/pom.xml
@@ -25,6 +25,20 @@
       <artifactId>Java-WebSocket</artifactId>
       <version>1.4.0</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-all -->
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>activemq-core</artifactId>
+      <version>5.7.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20180813</version>
+    </dependency>
+    
   </dependencies>
   <build>
     <plugins>
