--- a/repairnator/build-rainer/pom.xml
+++ b/repairnator/build-rainer/pom.xml
@@ -12,7 +12,20 @@
   <version>1.0-SNAPSHOT</version>
   <name>build-rainer</name>
   <url>http://maven.apache.org</url>
+  
+  <repositories>
+    <repository>
+      <id>jmx.management</id>
+      <url>http://www.datanucleus.org:15080/downloads/maven2/</url>
+    </repository>
+  </repositories>
+   
   <dependencies>
+    <dependency>
+        <groupId>fr.inria.repairnator</groupId>
+        <artifactId>repairnator-core</artifactId>
+        <version>3.1-SNAPSHOT</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -32,13 +45,27 @@
       <artifactId>activemq-core</artifactId>
       <version>5.7.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.activemq</groupId>
+      <artifactId>activemq-broker</artifactId>
+      <version>5.15.9</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.json/json -->
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
       <version>20180813</version>
     </dependency>
-    
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-driver</artifactId>
+      <version>3.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.management</groupId>
+      <artifactId>jmx</artifactId>
+      <version>1.2.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
