Feat: change to an image supporting jmx

--- a/repairnator/kubernetes-support/queue-for-buildids/activemq.yaml
+++ b/repairnator/kubernetes-support/queue-for-buildids/activemq.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: activemq
-        image: webcenter/activemq:5.14.3
+        image: antonw/activemq-jmx
         imagePullPolicy: IfNotPresent
         ports:
           - containerPort: 61613
