--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ jobs:
     - stage: test
       name: "repairnator"
       install: travis_retry ./.travis/travis-before.sh
-      script: travis_wait 30 ./.travis/travis-run.sh
+      script: ./.travis/travis-run.sh
 
     - stage: deploy
       name: "deploy to Sonatype and Dockerhub"
