Fix: remove redundancies

--- a/repairnator/docker-images/pipeline-dockerimage/Dockerfile
+++ b/repairnator/docker-images/pipeline-dockerimage/Dockerfile
@@ -8,8 +8,7 @@ COPY z3_for_linux /root/
 COPY projects_to_ignore.txt /root/
 COPY logback.xml /root/
 COPY configure_git.sh /root/
-#COPY build_repairnator.sh /root/
-COPY repairnator-pipeline.jar /root/
+COPY build_repairnator.sh /root/
 COPY pipeline_launcher.sh /root/
 
 RUN apt-get update 
@@ -19,7 +18,7 @@ RUN echo `xmlstarlet sel -t -v '//latest' maven-metadata.xml` > /root/version.in
 RUN chmod +x /root/*.sh
 RUN echo "Europe/Paris" > /etc/timezone 
 RUN /root/configure_git.sh 
-#RUN /root/build_repairnator.sh
+RUN /root/build_repairnator.sh
 
 ENV M2_HOME=$MAVEN_HOME
 ENV GITHUB_OAUTH=
@@ -27,8 +26,8 @@ ENV REPAIR_MODE=
 ENV BUILD_ID=
 ENV LOG_FILENAME=
 ENV RUN_ID=1
-ENV MONGODB_HOST=mongodb://localhost:27017
-ENV MONGODB_NAME=repairnator
+ENV MONGODB_HOST=
+ENV MONGODB_NAME=
 ENV OUTPUT=
 ENV PUSH_URL=
 ENV SMTP_SERVER=
@@ -45,8 +44,8 @@ ENV CREATE_PR=0
 
 # NOOP = regular repairnator, KUBERNETES = will fetch build id from activeMQ.
 ENV LISTEN_MODE=NOOP
-ENV ACTIVEMQ_URL=tcp://localhost:61616
-ENV ACTIVEMQ_LISTEN_QUEUE=pipeline
+ENV ACTIVEMQ_URL=
+ENV ACTIVEMQ_LISTEN_QUEUE=
 
 WORKDIR /root
 ENTRYPOINT /root/pipeline_launcher.sh
