Fix: update pipeline dockerFile and fix email bug (#946)

--- a/repairnator/docker-images/pipeline-dockerimage/Dockerfile
+++ b/repairnator/docker-images/pipeline-dockerimage/Dockerfile
@@ -25,7 +25,7 @@ ENV GITHUB_OAUTH=
 ENV REPAIR_MODE=
 ENV BUILD_ID=
 ENV LOG_FILENAME=
-ENV RUN_ID=
+ENV RUN_ID=1
 ENV MONGODB_HOST=
 ENV MONGODB_NAME=
 ENV OUTPUT=
@@ -34,13 +34,18 @@ ENV SMTP_SERVER=
 ENV SMTP_PORT=
 ENV SMTP_USERNAME=
 ENV SMTP_PASSWORD=
-ENV SMTP_TLS=
+ENV SMTP_TLS=1
 ENV NOTIFY_TO=
 ENV REPAIR_TOOLS=
 ENV GITHUB_USERNAME=
 ENV GITHUB_USEREMAIL=
 ENV EXPERIMENTAL_PLUGIN_REPOS=
 ENV CREATE_PR=0
+
+# NOOP = regular repairnator, KUBERNETES = will fetch build id from activeMQ.
+ENV LISTEN_MODE=NOOP
+ENV ACTIVEMQ_URL=
+ENV ACTIVEMQ_LISTEN_QUEUE=
 
 WORKDIR /root
 ENTRYPOINT /root/pipeline_launcher.sh
