--- a/repairnator/repairnator-realtime/pom.xml
+++ b/repairnator/repairnator-realtime/pom.xml
@@ -11,7 +11,7 @@
 
     <dependencies>
         <dependency>
-            <artifactId>repairnator-dockerpool</artifactId>
+            <artifactId>repairnator-core</artifactId>
             <groupId>fr.inria.repairnator</groupId>
             <version>3.1-SNAPSHOT</version>
         </dependency>
