--- a/repairnator/kubernetes-support/repairnator-deployment-yamlfiles/repairnator-pipeline.yaml
+++ b/repairnator/kubernetes-support/repairnator-deployment-yamlfiles/repairnator-pipeline.yaml
@@ -16,16 +16,18 @@ spec:
     spec:
       containers:
       - name: repairnator-pipeline
-        image: repairnator/repairnator-pipeline
+        image: repairnator/pipeline
         env: 
+        # Mongodb
         - name: MONGODB_HOST
           value: mongodb://mongo:27017 # default if service of Mongodb deployed on K8s is called mongo with port 27017.
         - name: MONGODB_NAME
           value: admin   # Name of the database for the pipeline to store files when done repairing,
                          # Also note that the db choosed need to have write access like admin default database
-        # Optional for pushing or creating PR to github repo provided with the PUSH_PR otherwise can be left blank
+        # For pushing or creating PR to github repo provided with the PUSH_PR otherwise can be left blank
+        # Obligatory to clone from github
         - name: GITHUB_OAUTH
-          value: 0
+          value: 
         - name: PUSH_URL
           value: 
         - name: GITHUB_USERNAME
@@ -34,16 +36,29 @@ spec:
           value: 
         - name: CREATE_PR 
           value: "0"  # "1" if decide to create PR to the repo provided with the PUSH_URL
-        # Optional for notifications otherwise can be left blank
+        # Optional for notifications otherwise can be left blank, SMTP
         - name: SMTP_SERVER
           value: 
         - name: SMTP_PORT
-          value:
+          value: 
         - name: SMTP_USERNAME
-          value:
+          value: 
         - name: SMTP_PASSWORD
-          value:
+          value: 
         - name: SMTP_TLS
           value: "1"
         - name: NOTIFY_TO
-          value:
+          value: 
+        # ActiveMQ related
+        - name: LISTEN_MODE
+          value: KUBERNETES
+        - name: ACTIVEMQ_URL
+          value: tcp://activemq:61616
+        - name: ACTIVEMQ_LISTEN_QUEUE
+          value: pipeline
+        # Mandatory 
+        - name: RUN_ID
+          value: "1"
+        # Just a dummy build id , must have since JSAP required for this one.
+        - name: BUILD_ID
+          value: "560996872" 
