--- a/repairnator/repairnator-core/pom.xml
+++ b/repairnator/repairnator-core/pom.xml
@@ -11,7 +11,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>fr.inria.spirals</groupId>
+            <groupId>fr.inria.jtravis</groupId>
             <artifactId>jtravis</artifactId>
             <version>2.6</version>
         </dependency>
