--- a/repairnator/repairnator-core/pom.xml
+++ b/repairnator/repairnator-core/pom.xml
@@ -11,6 +11,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>fr.inria.jtravis</groupId>
+            <artifactId>jtravis</artifactId>
+            <version>2.6</version>
+        </dependency>
+        <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongodb-driver</artifactId>
             <version>3.2.2</version>
