--- a/repairnator/repairnator-realtime/pom.xml
+++ b/repairnator/repairnator-realtime/pom.xml
@@ -8,7 +8,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>repairnator-realtime</artifactId>
-
+    <repositories>
+        <repository>
+          <id>jmx.management</id>
+          <url>http://www.datanucleus.org:15080/downloads/maven2/</url>
+        </repository>
+      </repositories>
     <dependencies>
         <dependency>
             <artifactId>repairnator-core</artifactId>
@@ -32,6 +37,21 @@
             <groupId>org.apache.activemq</groupId>
             <artifactId>activemq-all</artifactId>
             <version>5.15.8</version>
+        </dependency>
+        <dependency>
+          <groupId>javax.management</groupId>
+          <artifactId>jmx</artifactId>
+          <version>1.2.1</version>
+        </dependency>
+        <dependency>
+          <groupId>org.java-websocket</groupId>
+          <artifactId>Java-WebSocket</artifactId>
+          <version>1.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
         </dependency>
     </dependencies>
 
