--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -10,11 +10,11 @@
 
     <groupId>fr.inria.repairnator</groupId>
     <artifactId>repairnator-root</artifactId>
-    <version>3.1-SNAPSHOT</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
     <name>repairnator-root</name>
     <inceptionYear>2017</inceptionYear>
-
+    
     <licenses>
         <license>
             <name>MIT</name>
@@ -82,6 +82,7 @@
     </repositories>
 
     <properties>
+        <revision>3.1</revision>
         <default.encoding>UTF-8</default.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
