--- a/repairnator/repairnator-realtime/pom.xml
+++ b/repairnator/repairnator-realtime/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>repairnator-root</artifactId>
         <groupId>fr.inria.repairnator</groupId>
-        <version>3.1-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -18,7 +18,7 @@
         <dependency>
             <artifactId>repairnator-core</artifactId>
             <groupId>fr.inria.repairnator</groupId>
-            <version>3.1-SNAPSHOT</version>
+            <version>${revision}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
