@monperrus at work ▫

--- a/repairnator/repairnator-core/pom.xml
+++ b/repairnator/repairnator-core/pom.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>repairnator-root</artifactId>
-        <groupId>fr.inria.repairnator</groupId>
-        <version>3.1-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>fr.inria.repairnator</groupId>
     <artifactId>repairnator-core</artifactId>
-
+    <version>${project.revision}</version>
+    
     <dependencies>
         <dependency>
             <groupId>fr.inria.jtravis</groupId>
