--- a/.travis.yml
+++ b/.travis.yml
@@ -14,13 +14,14 @@ jobs:
   include:
     - stage: test
       name: "maven-repair"
-      before_install: if [[ $TRAVIS_PULL_REQUEST_SLUG == eclipse/repairnator ]]; then travis_terminate 0; fi
+      before_install: if [[ $TRAVIS_BRANCH != master ]]; then travis_terminate 0; fi
       install: true
       script: ./.travis/travis-maven-repair.sh
 
     - stage: test
       name: "repairnator"
-      before_install: if [[ $TRAVIS_PULL_REQUEST_SLUG == eclipse/repairnator ]]; then travis_terminate 0; fi
+      # the PR build is responsible for the tests, no need to have the branch/push build (Eclipse's Travis account is very busy)
+      before_install: if [[ $TRAVIS_BRANCH != master ]]; then travis_terminate 0; fi
       install: ./.travis/travis-before.sh
       script: ./.travis/travis-run.sh
 
